<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.fragments.MovieDetailsFragment">

    <ImageButton
        android:id="@+id/ib_details_back"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/transparent_bg_cv"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/Details"
        android:textAlignment="center"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ib_details_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_details_back" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_details_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="@dimen/_25sdp"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="78dp">

                <ImageView
                    android:id="@+id/iv_details"
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="@dimen/_330sdp"
                    app:srcCompat="@drawable/ic_moviez_invert" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textColor="@color/colorTextLight"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_details_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | 4.8 "
                    android:textAlignment="textStart"
                    android:textColor="@color/colorTextLight"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_star_24" />

                <TextView
                    android:id="@+id/tv_details_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/runtime"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorTextLight"
                    android:textSize="18sp" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_details_category"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/transparent_bg_cv"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/cv_item_small" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:text="Language"
                android:textColor="@color/colorTextLight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_details_language"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/transparent_bg_cv"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/cv_item_small" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:text="Synopsis"
                android:textColor="@color/colorTextLight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_details_synopsis"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/Synopsis"
                android:textColor="@color/colorTextLight" />


        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/ib_details_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/ic_purchase_tickets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_details_back" />


</androidx.constraintlayout.widget.ConstraintLayout>